--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body, h1, h2, h3, h4, h5, h6 {
-    font-family: 'Cascadia Code', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     text-align: justify;
   }
 
