--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,14 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: 'Courier New', Courier, monospace;
     text-align: justify;
 }
-
+#particles-js{
+    height: 100%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+}
 #gitlogo{
     margin-top:5;
     margin-right: 40px;
