--- a/Style.css
+++ b/Style.css
@@ -2,14 +2,7 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: 'Courier New', Courier, monospace;
     text-align: justify;
 }
-#particles-js{
-    height: 100%;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    left: 0;
-}
+
 #gitlogo{
     margin-top:5;
     margin-right: 40px;
@@ -20,31 +13,42 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 #hackerrank{
-    margin-top: -17;
+    margin-top: -17px;
     margin-right: 30px;
 }
 
 #linkedin{
-    margin-top: -3;
+    margin-top:-7px;
+    margin-right: 30px;
+}
+
+#youtube{
+    margin-top:-12px;
+    margin-right: 30px;
+}
+
+#insta{
+    margin-top:10px;
     margin-right: 30px;
 }
 
 
 #info2{
-    margin-top: 85;
-    margin-left: -193;
+    margin-top: 85px;
+    margin-left: -193px;
+
     display: flex;
     justify-content: space-evenly;
-    justify-content:  center 
+
     
 }
 
 #info{
-    margin-top: 24px;
-    margin-right: 30px;
+    margin-top: 20px;
+
     display: flex;
     justify-content: space-evenly; 
-    justify-content:  center ;
+
 }
 
 #nidsgit img:hover{
@@ -113,23 +117,27 @@ body{
 #underlay{
     margin-right: 100;
     font-size: 20px;
-    font-weight: 500 ;
+    font-weight: 500px ;
     display: block;
+}
+#main_text1{
+    
+    text-align: justify;
+    display: block;
+    margin-right: auto;
+    width: 90%;
 }
 #main_text{
     
     text-align: justify;
-    font-size: 20;
-    font-weight: 500 ;
     display: block;
-    margin-left: 50;
-    margin-right: auto;
-    width: 90%;
+    
+
 }
 #name{
 
     margin-left: -5;
-    font-size: 60;
+    font-size: 60px;
     
     font-family: 'Cascadia Code', sans-serif;
     display: block;
