--- a/Style.css
+++ b/Style.css
@@ -106,7 +106,7 @@ a:link{
     text-decoration: none;
 }
 a:hover{
-    color:rgb(190, 0, 0); ;
+    color:rgb(190, 0, 0);
 }
 body{
     padding-right: 100px;
