--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,30 @@
 body, h1, h2, h3, h4, h5, h6 {
     font-family: 'Courier New', Courier, monospace;
     text-align: justify;
+    height: auto;
+    padding: 0;
+    margin: 0;
 }
+
+
+
+  /* ---- particles.js container ---- */
+
+
+
+#particles-js {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    z-index: 9999;
+
+  background-repeat: no-repeat;
+    
+}
+
+
 
 #gitlogo{
     margin-top:5;
