--- a/Style.css
+++ b/Style.css
@@ -4,62 +4,72 @@ body, h1, h2, h3, h4, h5, h6 {
     height: auto;
     padding: 0;
     margin: 0;
+    z-index:1;
 }
-
-
-
-  /* ---- particles.js container ---- */
-
-
-
+ 
 #particles-js {
     position: absolute;
     top: 0px;
     width: 100%;
     height: 100%;
     left: 0px;
-    z-index: 9999;
+    z-index: -1; 
+    position: fixed;
 
-  background-repeat: no-repeat;
-    
+
+
 }
+
+.body-particles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index:-1;
+}
+
 
 
 
 #gitlogo{
     margin-top:5;
     margin-right: 40px;
+
 }
 
 #leetcode{
     margin-right: 30px;
+
 }
 
 #hackerrank{
     margin-top: -17px;
     margin-right: 30px;
+
 }
 
 #linkedin{
     margin-top:-7px;
     margin-right: 30px;
+
 }
 
 #youtube{
     margin-top:-12px;
     margin-right: 30px;
+
 }
 
 #insta{
     margin-top:10px;
     margin-right: 30px;
+
 }
 
 
 #info2{
     margin-top: 85px;
     margin-left: -193px;
-
+    z-index: 3;
     display: flex;
     justify-content: space-evenly;
 
@@ -68,10 +78,14 @@ body, h1, h2, h3, h4, h5, h6 {
 
 #info{
     margin-top: 20px;
-
+    z-index: 3;
     display: flex;
     justify-content: space-evenly; 
 
+}
+
+#nidsgit{
+    z-index: 3;
 }
 
 #nidsgit img:hover{
@@ -83,6 +97,7 @@ body, h1, h2, h3, h4, h5, h6 {
 #nidsgit img,
 #skills_sub div{
     transition: transform 0.2s ease-in-out;
+    
 }
 
 #info2 div:hover,
@@ -92,18 +107,21 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 #Header{
+    z-index: 1;
     padding: 20;
     display: flex;
     justify-content: space-evenly;
 }
 
 #skills_sub{
+    z-index: 1;
     margin-left: -70;
     display: flex;
     justify-content: space-evenly;
 }
 
 #programming_languages{
+    z-index: 1;
     margin-top: 25;
     margin-left: 80;
     font-size: h3;
@@ -136,6 +154,7 @@ body{
     padding-left: 100px;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
+    z-index: 0;
 }
 #underlay{
     margin-right: 100;
@@ -144,14 +163,15 @@ body{
     display: block;
 }
 #main_text1{
-    
+    z-index: 2;
     text-align: justify;
     display: block;
     margin-right: auto;
     width: 90%;
 }
+
 #main_text{
-    
+
     text-align: justify;
     display: block;
     
@@ -168,6 +188,7 @@ body{
     color: rgb(182, 0, 0);
 }
 hr {
+    z-index: 4;
     height:1px;
     border-width:0;
     border-top: 2px dashed rgb(190, 0, 0);
