--- a/Style.css
+++ b/Style.css
@@ -15,9 +15,6 @@ body, h1, h2, h3, h4, h5, h6 {
     left: 0px;
     z-index: -1; 
     position: fixed;
-
-
-
 }
 
 .body-particles{
@@ -158,7 +155,7 @@ body{
 }
 #underlay{
     margin-right: 100;
-    font-size: 20px;
+    font-size: 26px;
     font-weight: 500px ;
     display: block;
 }
@@ -174,13 +171,14 @@ body{
 
     text-align: justify;
     display: block;
+    font-size: x-large;
     
 
 }
 #name{
 
     margin-left: -5;
-    font-size: 60px;
+    font-size: 80px;
     
     font-family: 'Cascadia Code', sans-serif;
     display: block;
